hice anidación en los scss

--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@
 
         <div class="seccion-primera-info info-9">
           <p>Para saber más sobre meditación hacer click en el enlace:</p>
-          <a href="./Pages/meditacion.html">Meditación</a>
+          <a href="./pages/meditacion.html">Meditación</a>
           <img src="images/meditar03.jpg" alt="piedras superpuestas" />
         </div>
       </section>
     </main>
 
-    <footer class="pie-fondo">
+    <footer class="pie">
       <div class="pie-frase">
         <p>El comienzo de un largo camino es dar el primer paso...</p>
         <p>y en Emersión nosotros te ayudamos a darlo</p>
