--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -143,7 +143,7 @@
 
     </main>
 
-    <footer class="pie-fondo">
+    <footer class="pie">
         <div class="pie-frase">
             <p> 
                 El comienzo de un largo camino es dar el primer paso...
