--- a/pages/meditacion.html
+++ b/pages/meditacion.html
@@ -138,7 +138,7 @@
       </section>
     </main>
 
-    <footer class="pie-fondo">
+    <footer class="pie">
       <div class="pie-frase">
         <p>El comienzo de un largo camino es dar el primer paso...</p>
         <p>y en Emersión nosotros te ayudamos a darlo</p>
