agregue map, variable, mixin utilidades y hovers

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
         <div class="seccion-primera-info info-5">
           <p>Para saber más sobre reiki haga click en el enlace:</p>
-          <a href="./pages/reiki.html">Reiki</a>
+          <a class="link-color-primario link-contenedor" href="./pages/reiki.html">Reiki</a>
           <img src="images/reiki01.jpg" alt="manos que conectan con la luz" />
         </div>
 
@@ -161,7 +161,7 @@
 
         <div class="seccion-primera-info info-7">
           <p>Para saber más sobre tarot hacer click en el enlace:</p>
-          <a href="./pages/tarot.html">Tarot</a>
+          <a class="link-color-primario link-contenedor" href="./pages/tarot.html">Tarot</a>
           <img src="images/Tarot01.jpg" alt="cartas del tarot" />
         </div>
 
@@ -176,7 +176,7 @@
 
         <div class="seccion-primera-info info-9">
           <p>Para saber más sobre meditación hacer click en el enlace:</p>
-          <a href="./pages/meditacion.html">Meditación</a>
+          <a class="link-color-primario link-contenedor" href="./pages/meditacion.html">Meditación</a>
           <img src="images/meditar03.jpg" alt="piedras superpuestas" />
         </div>
       </section>
