--- a/pages/reiki.html
+++ b/pages/reiki.html
@@ -129,7 +129,7 @@
               Si quieres recibir más información sobre nuestros servicios, haz
               click en el enlace:
             </p>
-            <a href="./contacto.html">Contacto</a>
+            <a class="link-color-secundario link-contenedor" href="./contacto.html">Contacto</a>
           </div>
           <img src="../images/reiki02.jpg" alt="imposición de manos" />
         </div>
