--- a/pages/tarot.html
+++ b/pages/tarot.html
@@ -298,7 +298,7 @@
             Si quieres recibir más información sobre nuestros servicios, haz
             click en el enlace:
           </p>
-          <a href="./contacto.html">Contacto</a>
+          <a class="link-color-primario link-contenedor link-contacto" href="./contacto.html">Contacto</a>
         </div>
       </section>
     </main>
