hice y aplique mixin para font, agregue hover con map a contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -186,8 +186,12 @@
           </div>
 
           <div class="seccion-contacto-info contenido-15 boton-enviar">
-            <button type="reset">Resetear</button>
-            <button type="submit">Enviar</button>
+            <button class="link-color-fuente-claro" type="reset">
+              Resetear
+            </button>
+            <button class="link-color-fuente-claro" type="submit">
+              Enviar
+            </button>
           </div>
 
           <div class="seccion-contacto-info contenido-16">
