modificar fotos, agregar texto acordion

--- a/pages/tarot.html
+++ b/pages/tarot.html
@@ -176,10 +176,7 @@
             >
               <div class="accordion-body cuerpo-acordeon">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Laborum eos qui impedit atque, similique hic repellat
-                  expedita. Accusantium dicta magnam cupiditate numquam vero
-                  sint, animi delectus placeat reiciendis pariatur. Nihil.
+                  Los arcanos mayores consisten en un grupo de 22 cartas arquetípicas que revelan distintas etapas de evolución en el camino del mago
                 </p>
               </div>
             </div>
@@ -205,10 +202,7 @@
             >
               <div class="accordion-body cuerpo-acordeon">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Laborum eos qui impedit atque, similique hic repellat
-                  expedita. Accusantium dicta magnam cupiditate numquam vero
-                  sint, animi delectus placeat reiciendis pariatur. Nihil.
+                  Los arcanos menores están conformados por una serie de cartas que están agrupadas bajo 4 elementos distintos: los oros, las copas, las espadas y los bastos. Cada elemento contiene 10 cartas numeradas y sus respectivos sota, caballero, reina y rey. Son en total 56 arcanos menores y aportan información más específica sobre una situación.
                 </p>
               </div>
             </div>
@@ -234,10 +228,7 @@
             >
               <div class="accordion-body cuerpo-acordeon">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Laborum eos qui impedit atque, similique hic repellat
-                  expedita. Accusantium dicta magnam cupiditate numquam vero
-                  sint, animi delectus placeat reiciendis pariatur. Nihil.
+                  Se puede tirar las cartas de diversas maneras. Por ejemplo, con tres cartas se puede consultar sobre un asunto en sus aspectos -pasado, presente y futuro-. Con dos cartas adicionales se puede consultar sobre los aspectos negativo y positivo del asunto. Igualmente se puede agregar un consejo y una conclusión, para una lectura con 7 cartas.
                 </p>
               </div>
             </div>
