--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel=“shortcut icon” href="./images/favicon.png" type=“image/x-icon”>
     <title>Emersión Soluciones Holísticas</title>
   </head>
 
