agregue meta descripcion-keywords-favicon cambie contrast color title en fondo claro

--- a/index.html
+++ b/index.html
@@ -15,8 +15,45 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel=“shortcut icon” href="./images/favicon.png" type=“image/x-icon”>
+    <link rel="shortcut icon" href="./images/favicon.jpg" type="image/jpg" />
+    <!-- Primary Meta Tags -->
     <title>Emersión Soluciones Holísticas</title>
+    <meta
+    name="keywords"
+    content="solución, reiki, tarot, meditación, sanación, evolución, alternativo, astrología"
+    />
+    <meta name="title" content="Emersión Soluciones Holísticas" />
+    <meta
+      name="description"
+      content="Somos seres holísticos: cuerpo, mente y espíritu. En Emersión te proponemos distintas vías para el cuidado y la evolución de estos componentes de nuestro ser"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://gabaldon-andres.vercel.app/index.html" />
+    <meta property="og:title" content="Emersión Soluciones Holísticas" />
+    <meta
+      property="og:description"
+      content="Somos seres holísticos: cuerpo, mente y espíritu. En Emersión te proponemos distintas vías para el cuidado y la evolución de estos componentes de nuestro ser"
+    />
+    <meta
+      property="og:image"
+      content="./images/amanecer02.jpg"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://gabaldon-andres.vercel.app/index.html" />
+    <meta property="twitter:title" content="Emersión Soluciones Holísticas" />
+    <meta
+      property="twitter:description"
+      content="Somos seres holísticos: cuerpo, mente y espíritu. En Emersión te proponemos distintas vías para el cuidado y la evolución de estos componentes de nuestro ser"
+    />
+    <meta
+      property="twitter:image"
+      content="./images/amanecer02.jpg"
+    />
+    <!-- Meta Tags Generated with https://metatags.io -->
   </head>
 
   <body class="cuerpo">
@@ -147,7 +184,11 @@
 
         <div class="seccion-primera-info info-5">
           <p>Para saber más sobre reiki haga click en el enlace:</p>
-          <a class="link-color-primario link-contenedor" href="./pages/reiki.html">Reiki</a>
+          <a
+            class="link-color-primario link-contenedor"
+            href="./pages/reiki.html"
+            >Reiki</a
+          >
           <img src="images/reiki01.jpg" alt="manos que conectan con la luz" />
         </div>
 
@@ -162,7 +203,11 @@
 
         <div class="seccion-primera-info info-7">
           <p>Para saber más sobre tarot hacer click en el enlace:</p>
-          <a class="link-color-primario link-contenedor" href="./pages/tarot.html">Tarot</a>
+          <a
+            class="link-color-primario link-contenedor"
+            href="./pages/tarot.html"
+            >Tarot</a
+          >
           <img src="images/Tarot01.jpg" alt="cartas del tarot" />
         </div>
 
@@ -177,7 +222,11 @@
 
         <div class="seccion-primera-info info-9">
           <p>Para saber más sobre meditación hacer click en el enlace:</p>
-          <a class="link-color-primario link-contenedor" href="./pages/meditacion.html">Meditación</a>
+          <a
+            class="link-color-primario link-contenedor"
+            href="./pages/meditacion.html"
+            >Meditación</a
+          >
           <img src="images/meditar03.jpg" alt="piedras superpuestas" />
         </div>
       </section>
