--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,7 +15,45 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="shortcut icon" href="../images/favicon.jpg" type="image/jpg" />
+    <!-- Primary Meta Tags -->
     <title>Contáctanos</title>
+    <meta name="title" content="Contáctanos" />
+    <meta
+      name="description"
+      content="En nuestra página de contacto puedes solicitar más información sobre nuestros servicios de reiki, tarot y meditación o dejarnos un comentario"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://gabaldon-andres.vercel.app/pages/contacto.html"
+    />
+    <meta property="og:title" content="Contáctanos" />
+    <meta
+      property="og:description"
+      content="En nuestra página de contacto puedes solicitar más información sobre nuestros servicios de reiki, tarot y meditación o dejarnos un comentario"
+    />
+    <meta property="og:image" content="../images/amanecer02.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://gabaldon-andres.vercel.app/pages/contacto.html"
+    />
+    <meta property="twitter:title" content="Contáctanos" />
+    <meta
+      property="twitter:description"
+      content="En nuestra página de contacto puedes solicitar más información sobre nuestros servicios de reiki, tarot y meditación o dejarnos un comentario"
+    />
+    <meta property="twitter:image" content="../images/amanecer02.jpg" />
+    <!-- Meta Tags Generated with https://metatags.io -->
+    <meta
+      name="keywords"
+      content="contacto, reiki, tarot, meditación, servicios, holístico"
+    />
   </head>
 
   <body>
