--- a/pages/meditacion.html
+++ b/pages/meditacion.html
@@ -15,7 +15,45 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="shortcut icon" href="../images/favicon.jpg" type="image/jpg" />
+    <!-- Primary Meta Tags -->
     <title>Meditación</title>
+    <meta name="title" content="Meditación" />
+    <meta
+      name="description"
+      content="La meditación es nos ayuda a calmar la mente para poder escuchar la voz de nuestro espíritu. Te podemos guiar en ese proceso gracias a nuestras meditaciones guiadas "
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://gabaldon-andres.vercel.app/pages/meditacion.html" />
+    <meta property="og:title" content="Meditación" />
+    <meta
+      property="og:description"
+      content="La meditación es nos ayuda a calmar la mente para poder escuchar la voz de nuestro espíritu. Te podemos guiar en ese proceso gracias a nuestras meditaciones guiadas "
+    />
+    <meta
+      property="og:image"
+      content="../images/amanecer02.jpg"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://gabaldon-andres.vercel.app/pages/meditacion.html" />
+    <meta property="twitter:title" content="Meditación" />
+    <meta
+      property="twitter:description"
+      content="La meditación es nos ayuda a calmar la mente para poder escuchar la voz de nuestro espíritu. Te podemos guiar en ese proceso gracias a nuestras meditaciones guiadas "
+    />
+    <meta
+      property="twitter:image"
+      content="../images/amanecer02.jpg"
+    />
+    <!-- Meta Tags Generated with https://metatags.io -->
+    <meta
+    name="keywords"
+    content="meditación, paz, tranquilidad, silencio, mente, vacío"
+    />
   </head>
 
   <body>
