--- a/pages/reiki.html
+++ b/pages/reiki.html
@@ -15,7 +15,45 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="shortcut icon" href="../images/favicon.jpg" type="image/jpg" />
+    <!-- Primary Meta Tags -->
     <title>Reiki</title>
+    <meta name="title" content="Reiki" />
+    <meta
+      name="description"
+      content="El reiki permite canalizar la energía universal  hacia tu energía personal. En Emersión podemos ayudarte a reequilibrar tu campo energético."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://gabaldon-andres.vercel.app/pages/reiki.html" />
+    <meta property="og:title" content="Reiki" />
+    <meta
+      property="og:description"
+      content="El reiki permite canalizar la energía universal  hacia tu energía personal. En Emersión podemos ayudarte a reequilibrar tu campo energético."
+    />
+    <meta
+      property="og:image"
+      content="../images/amanecer02.jpg"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://gabaldon-andres.vercel.app/pages/reiki.html" />
+    <meta property="twitter:title" content="Reiki" />
+    <meta
+      property="twitter:description"
+      content="El reiki permite canalizar la energía universal  hacia tu energía personal. En Emersión podemos ayudarte a reequilibrar tu campo energético."
+    />
+    <meta
+      property="twitter:image"
+      content="../images/amanecer02.jpg"
+    />
+    <!-- Meta Tags Generated with https://metatags.io -->
+    <meta
+    name="keywords"
+    content="reiki, sanación, energía, manos, canalización"
+    />
   </head>
 
   <body>
@@ -129,7 +167,11 @@
               Si quieres recibir más información sobre nuestros servicios, haz
               click en el enlace:
             </p>
-            <a class="link-color-secundario link-contenedor" href="./contacto.html">Contacto</a>
+            <a
+              class="link-color-secundario link-contenedor"
+              href="./contacto.html"
+              >Contacto</a
+            >
           </div>
           <img src="../images/reiki02.jpg" alt="imposición de manos" />
         </div>
