--- a/pages/tarot.html
+++ b/pages/tarot.html
@@ -15,7 +15,45 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="shortcut icon" href="../images/favicon.jpg" type="image/jpg" />
+    <!-- Primary Meta Tags -->
     <title>Tarot</title>
+    <meta name="title" content="Tarot" />
+    <meta
+      name="description"
+      content="El tarot nos permite buscar en nuestro interior las respuestas a las interrogantes trascendentales de nuestro ser y guiarnos en nuestras decisiones"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://gabaldon-andres.vercel.app/pages/tarot.html"
+    />
+    <meta property="og:title" content="Tarot" />
+    <meta
+      property="og:description"
+      content="El tarot nos permite buscar en nuestro interior las respuestas a las interrogantes trascendentales de nuestro ser y guiarnos en nuestras decisiones"
+    />
+    <meta property="og:image" content="../images/amanecer02.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://gabaldon-andres.vercel.app/pages/tarot.html"
+    />
+    <meta property="twitter:title" content="Tarot" />
+    <meta
+      property="twitter:description"
+      content="El tarot nos permite buscar en nuestro interior las respuestas a las interrogantes trascendentales de nuestro ser y guiarnos en nuestras decisiones"
+    />
+    <meta property="twitter:image" content="../images/amanecer02.jpg" />
+    <!-- Meta Tags Generated with https://metatags.io -->
+    <meta
+      name="keywords"
+      content="tarot, búsqueda, iniciación, camino, consulta, tirada, cartas"
+    />
   </head>
 
   <body>
@@ -176,7 +214,9 @@
             >
               <div class="accordion-body cuerpo-acordeon">
                 <p>
-                  Los arcanos mayores consisten en un grupo de 22 cartas arquetípicas que revelan distintas etapas de evolución en el camino del mago
+                  Los arcanos mayores consisten en un grupo de 22 cartas
+                  arquetípicas que revelan distintas etapas de evolución en el
+                  camino del mago
                 </p>
               </div>
             </div>
@@ -202,7 +242,12 @@
             >
               <div class="accordion-body cuerpo-acordeon">
                 <p>
-                  Los arcanos menores están conformados por una serie de cartas que están agrupadas bajo 4 elementos distintos: los oros, las copas, las espadas y los bastos. Cada elemento contiene 10 cartas numeradas y sus respectivos sota, caballero, reina y rey. Son en total 56 arcanos menores y aportan información más específica sobre una situación.
+                  Los arcanos menores están conformados por una serie de cartas
+                  que están agrupadas bajo 4 elementos distintos: los oros, las
+                  copas, las espadas y los bastos. Cada elemento contiene 10
+                  cartas numeradas y sus respectivos sota, caballero, reina y
+                  rey. Son en total 56 arcanos menores y aportan información más
+                  específica sobre una situación.
                 </p>
               </div>
             </div>
@@ -228,7 +273,12 @@
             >
               <div class="accordion-body cuerpo-acordeon">
                 <p>
-                  Se puede tirar las cartas de diversas maneras. Por ejemplo, con tres cartas se puede consultar sobre un asunto en sus aspectos -pasado, presente y futuro-. Con dos cartas adicionales se puede consultar sobre los aspectos negativo y positivo del asunto. Igualmente se puede agregar un consejo y una conclusión, para una lectura con 7 cartas.
+                  Se puede tirar las cartas de diversas maneras. Por ejemplo,
+                  con tres cartas se puede consultar sobre un asunto en sus
+                  aspectos -pasado, presente y futuro-. Con dos cartas
+                  adicionales se puede consultar sobre los aspectos negativo y
+                  positivo del asunto. Igualmente se puede agregar un consejo y
+                  una conclusión, para una lectura con 7 cartas.
                 </p>
               </div>
             </div>
@@ -289,7 +339,11 @@
             Si quieres recibir más información sobre nuestros servicios, haz
             click en el enlace:
           </p>
-          <a class="link-color-primario link-contenedor link-contacto" href="./contacto.html">Contacto</a>
+          <a
+            class="link-color-primario link-contenedor link-contacto"
+            href="./contacto.html"
+            >Contacto</a
+          >
         </div>
       </section>
     </main>
