corregí keywords, espacio entre cards, margintop tarot, alinear footer, padding placeholder, responsive reiki y padding containerindex

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <link rel="shortcut icon" href="./images/favicon.jpg" type="image/jpg" />
     <!-- Primary Meta Tags -->
     <title>Emersión Soluciones Holísticas</title>
-    <meta
-    name="keywords"
-    content="solución, reiki, tarot, meditación, sanación, evolución, alternativo, astrología"
-    />
     <meta name="title" content="Emersión Soluciones Holísticas" />
+    <meta
+      name="keywords"
+      content="solución, reiki, tarot, meditación, sanación, evolución, alternativo, astrología"
+    />
     <meta
       name="description"
       content="Somos seres holísticos: cuerpo, mente y espíritu. En Emersión te proponemos distintas vías para el cuidado y la evolución de estos componentes de nuestro ser"
@@ -30,29 +30,29 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://gabaldon-andres.vercel.app/index.html" />
+    <meta
+      property="og:url"
+      content="https://gabaldon-andres.vercel.app/index.html"
+    />
     <meta property="og:title" content="Emersión Soluciones Holísticas" />
     <meta
       property="og:description"
       content="Somos seres holísticos: cuerpo, mente y espíritu. En Emersión te proponemos distintas vías para el cuidado y la evolución de estos componentes de nuestro ser"
     />
-    <meta
-      property="og:image"
-      content="./images/amanecer02.jpg"
-    />
+    <meta property="og:image" content="./images/amanecer02.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://gabaldon-andres.vercel.app/index.html" />
+    <meta
+      property="twitter:url"
+      content="https://gabaldon-andres.vercel.app/index.html"
+    />
     <meta property="twitter:title" content="Emersión Soluciones Holísticas" />
     <meta
       property="twitter:description"
       content="Somos seres holísticos: cuerpo, mente y espíritu. En Emersión te proponemos distintas vías para el cuidado y la evolución de estos componentes de nuestro ser"
     />
-    <meta
-      property="twitter:image"
-      content="./images/amanecer02.jpg"
-    />
+    <meta property="twitter:image" content="./images/amanecer02.jpg" />
     <!-- Meta Tags Generated with https://metatags.io -->
   </head>
 
